# tickrs

./: .env.example  .ralph-loop.sh  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REFACTOR_PLAN.md  progress.txt  release.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
Formula/: tickrs.rb
examples/: automation.rs  batch_operations.rs  json_parsing.rs
plans/: PRD.md
scripts/: ralph-afk.sh  ralph-once.sh
src/: constants.rs  lib.rs  main.rs
src/api/: auth.rs  client.rs  mod.rs  project.rs  task.rs  types.rs
src/cli/: mod.rs  project.rs  root.rs  subtask.rs  task.rs
src/config/: mod.rs
src/models/: mod.rs  priority.rs  project.rs  status.rs  subtask.rs  task.rs  time.rs
src/output/: json.rs  mod.rs  text.rs
src/utils/: date_parser.rs  error.rs  mod.rs
tests/: api_integration_tests.rs  cli_tests.rs  oauth_tests.rs
