[package]
name = "ticktickrs"
version = "0.1.1"
edition = "2021"
authors = ["Kees Kluskens <kees@kees.im>"]
description = "A CLI Tool for TickTick tasks"
license = "MIT"
keywords = ["cli", "tool"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/SpaceK33z/tickrs"
homepage = "https://github.com/SpaceK33z/tickrs"
documentation = "https://docs.rs/tickrs"
rust-version = "1.87"
publish = true

[[bin]]
name = "tickrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
anyhow = "1"
thiserror = "2"
dirs = "6"
toml = "0.8"
dotenvy = "0.15"
dateparser = "0.2"
oauth2 = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webbrowser = "1"

[profile.release]
opt-level = "z"        # Optimize for binary size
lto = true             # Enable link-time optimization
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Don't include panic unwinding code
strip = true           # Strip symbols from binary

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
